# sb_tasks

./: README.md
compiler-ilp/: CMakeLists.txt  README.md  build.sh
compiler-ilp/src/: main.cpp  solver.cpp  solver.hpp  tests.cpp
compiler-translator/: translator.py
compiler-translator/tests/: test1_input.json  test1_output.json
rtl/alu/: fb32_addsub.sv  simulate.sh  tb_fb32_addsub.sv
rtl/converter/: fp32converter.sv  simulate.sh  tb_fp32converter.sv
